# napari-process-points-and-surfaces

./: LICENSE  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: test_and_deploy.yml
.napari/: config.yml
docs/: API_comparison.ipynb  branchoid.ipynb  branchoid2.ipynb  connected_component_labeling.ipynb  creating_surfaces.ipynb  curvature_measurement.ipynb  demo.ipynb  interactive_visualization_in_notebooks.ipynb  open3d_api.txt  quality_measurements.ipynb  surface_measurements.ipynb  surface_vertex_classification.ipynb  synthetic_branchoid.ipynb  table_row_classifier.cl  tabular_quality_measurements.ipynb  vedo_api.txt  visualizing_surfaces.ipynb
licenses_third_party/: open3d_LICENSE  vedo_LICENSE
napari_process_points_and_surfaces/: __init__.py  _quantification.py  _surface_annotation.py  _surface_annotation_widget.py  _utils.py  _vedo.py
napari_process_points_and_surfaces/_tests/: test_function.py  test_open3d.py  test_vedo_functions.py
napari_process_points_and_surfaces/data/: bun_zipper_stanford_bunny_source.txt  gastruloid.ply  gastruloid_source.txt  knot_license.md
napari_surface_processing/: __init__.py
napari_surface_processing/_tests/: test_function.py
