[metadata]
name = napari-process-points-and-surfaces
version = 0.1.0
author = Robert Haase
author_email = robert.haase@tu-dresden.de
url = https://github.com/haesleinhuepf/napari-process-points-and-surfaces
license = BSD-3-Clause
description = A plugin based on pymeshlab for processing surfaces
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Framework :: napari
    Topic :: Scientific/Engineering :: Image Processing
    Topic :: Scientific/Engineering :: Information Analysis
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/haesleinhuepf/napari-process-points-and-surfaces/issues
    Documentation = https://github.com/haesleinhuepf/napari-process-points-and-surfaces#README.md
    Source Code = https://github.com/haesleinhuepf/napari-process-points-and-surfaces
    User Support = https://github.com/haesleinhuepf/napari-process-points-and-surfaces/issues

[options]
packages = find:
python_requires = >=3.7

# add your package requirements here
install_requires =
    napari-plugin-engine>=0.1.4
    numpy
    napari
    napari-tools-menu
    napari-time-slicer
    open3d

[options.entry_points] 
napari.plugin = 
    napari-process-points-and-surfaces = napari_surface_processing
