[metadata]
name = napari-process-points-and-surfaces
version = 0.5.0
author = Robert Haase, Johannes Soltwedel
author_email = robert.haase@tu-dresden.de
url = https://github.com/haesleinhuepf/napari-process-points-and-surfaces
license = BSD-3-Clause
description = Process and analyze surfaces using open3d and vedo in napari
long_description = file: README.md
long_description_content_type = text/markdown
include_package_data = True
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    Framework :: napari
    Topic :: Scientific/Engineering :: Image Processing
    Topic :: Scientific/Engineering :: Information Analysis
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/haesleinhuepf/napari-process-points-and-surfaces/issues
    Documentation = https://github.com/haesleinhuepf/napari-process-points-and-surfaces#README.md
    Source Code = https://github.com/haesleinhuepf/napari-process-points-and-surfaces
    User Support = https://github.com/haesleinhuepf/napari-process-points-and-surfaces/issues

[options]
packages = find:
python_requires = >=3.7

# add your package requirements here
install_requires =
    napari-plugin-engine>=0.1.4
    numpy
    napari
    napari-tools-menu>=0.1.14
    napari-time-slicer>=0.4.5
    napari-workflows>=0.2.3
    vedo>=2022.5.0
    napari-skimage-regionprops>=0.5.5
    pandas
    imageio!=2.22.1
    stackview>=0.5.2

include_package_data = True

[options.entry_points]
napari.plugin =
    napari-process-points-and-surfaces = napari_process_points_and_surfaces
